// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorChanger No title (should use default) 1`] = `
<div>
  <h2>
    React App Loaded!
  </h2>
  <p>
    Check this example app: change the color to see it reflected in the text next to it.
  </p>
  <div
    className="container"
  >
    <select
      className="color-picker"
      onChange={[Function]}
    >
      <option
        value="black"
      >
        Black
      </option>
      <option
        value="green"
      >
        Green
      </option>
      <option
        value="red"
      >
        Red
      </option>
      <option
        value="blue"
      >
        Blue
      </option>
      <option
        value="purple"
      >
        Purple
      </option>
    </select>
    <span>
      ColorDisplay 
      {"color":"black"}
    </span>
  </div>
</div>
`;

exports[`ColorChanger Some title 1`] = `
<div>
  <h2>
    This is a test title
  </h2>
  <p>
    Check this example app: change the color to see it reflected in the text next to it.
  </p>
  <div
    className="container"
  >
    <select
      className="color-picker"
      onChange={[Function]}
    >
      <option
        value="black"
      >
        Black
      </option>
      <option
        value="green"
      >
        Green
      </option>
      <option
        value="red"
      >
        Red
      </option>
      <option
        value="blue"
      >
        Blue
      </option>
      <option
        value="purple"
      >
        Purple
      </option>
    </select>
    <span>
      ColorDisplay 
      {"color":"black"}
    </span>
  </div>
</div>
`;
